feat: replace ui on cli